[package]
name = "rt"
version = "1.0.0"
edition = "2024"
publish = false

[package.metadata.release]
publish = false

[dependencies]
num = "0.4.3"
anyhow = "1.0"
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
winit = { version = "0.30.13", features = ["rwh_06"] }
raw-window-handle = "0.6"
inline-spirv = "0.2.1"
